# Mosaic

./: Cargo.toml  README.md
crates/mosaic-core/: Cargo.toml
crates/mosaic-core/src/: crypto.rs  error.rs  header.rs  index.rs  lib.rs  lock.rs  pool.rs  security.rs
crates/mosaic-fuse/: Cargo.toml
crates/mosaic-fuse/src/: fs.rs  lib.rs
crates/mosaic-tui/: Cargo.toml
crates/mosaic-tui/src/: app.rs  main.rs
crates/mosaic-tui/src/screens/: dashboard.rs  init.rs  mod.rs  unlock.rs
crates/mosaic-tui/src/widgets/: mod.rs  pool_bar.rs
