[package]
name = "mosaic-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
mosaic-core = { path = "../mosaic-core" }
mosaic-fuse = { path = "../mosaic-fuse" }
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
rpassword = "7"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }
fuser = "0.14"
zeroize = "1.7"
rand = "0.8"
